text wait to be changed

--- a/src/Centivizer/data/languages/en/translation.json
+++ b/src/Centivizer/data/languages/en/translation.json
@@ -1,5 +1,6 @@
 {
-  "game-select-title": "What Game Would\nYou Like To Play?",
+  "game-select-title": "Braintagger: Serious Game to Test Cognitive Abilities",
+  "game-select-subtitle": "Designed to test across a battery of cognitive abilities for functional independence and general wellbeing",
   "start": "start",
   "par-num": "Participant Number",
   "invalid-par-num": "Invalid participant number",
